--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* Background Layar */
 body {
     position: relative;
     display: flex;
@@ -18,6 +19,7 @@ body {
     height: 100vh;
 }
 
+/* Table Position */
 .table {
     margin: 50px 0px;
     width: 100%;
@@ -32,12 +34,14 @@ body {
     gap: 10px;
 }
 
+/* Image Card */
 .ai-cards img,
 .your-cards img {
     width: 100px;
     margin: 1px;
 }
 
+/* Title Result */
 .title {
     padding-bottom: 30px;
 }
@@ -48,6 +52,7 @@ p {
     margin-bottom: 5px;
 }
 
+/* Input Field */
 .input-money {
     border: 3px solid grey;
     height: 30px;
@@ -55,6 +60,7 @@ p {
     text-align: center;
 }
 
+/* Buttons */
 .btns {
     display: flex;
     flex-direction: row;
@@ -168,6 +174,7 @@ button {
     background-color: #ff0505;
 }
 
+/* Responsive */
 @media screen and (max-width: 992px) {
 
     .ai-cards img,
